[issue-368] knative integration with DataIndex and JobService: address review comments

--- a/config/crd/bases/sonataflow.org_sonataflowplatforms.yaml
+++ b/config/crd/bases/sonataflow.org_sonataflowplatforms.yaml
@@ -16598,6 +16598,23 @@ spec:
                 description: The generation observed by the deployment controller.
                 format: int64
                 type: integer
+              triggers:
+                description: Triggers list of triggers created for the SonataFlowPlatform
+                items:
+                  description: SonataFlowPlatformTriggerRef defines a trigger created
+                    for the SonataFlowPlatform.
+                  properties:
+                    name:
+                      description: Name of the Trigger
+                      type: string
+                    namespace:
+                      description: Namespace of the Trigger
+                      type: string
+                  required:
+                  - name
+                  - namespace
+                  type: object
+                type: array
               version:
                 description: Version the operator version controlling this Platform
                 type: string
