--- a/operator.yaml
+++ b/operator.yaml
@@ -17089,6 +17089,23 @@ spec:
                 description: The generation observed by the deployment controller.
                 format: int64
                 type: integer
+              triggers:
+                description: Triggers list of triggers created for the SonataFlowPlatform
+                items:
+                  description: SonataFlowPlatformTriggerRef defines a trigger created
+                    for the SonataFlowPlatform.
+                  properties:
+                    name:
+                      description: Name of the Trigger
+                      type: string
+                    namespace:
+                      description: Namespace of the Trigger
+                      type: string
+                  required:
+                  - name
+                  - namespace
+                  type: object
+                type: array
               version:
                 description: Version the operator version controlling this Platform
                 type: string
@@ -26658,6 +26675,23 @@ spec:
                         type: string
                     type: object
                 type: object
+              triggers:
+                description: Triggers list of triggers created for the SonataFlow
+                items:
+                  description: SonataFlowTriggerRef defines a trigger created for
+                    the SonataFlow.
+                  properties:
+                    name:
+                      description: Name of the Trigger
+                      type: string
+                    namespace:
+                      description: Namespace of the Trigger
+                      type: string
+                  required:
+                  - name
+                  - namespace
+                  type: object
+                type: array
             type: object
         type: object
     served: true
