--- a/config/manager/controllers_cfg.yaml
+++ b/config/manager/controllers_cfg.yaml
@@ -8,11 +8,11 @@ kanikoDefaultWarmerImageTag: gcr.io/kaniko-project/warmer:v1.9.0
 # Default image used internally by the Operator Managed Kaniko builder to create the executor pods
 kanikoExecutorImageTag: gcr.io/kaniko-project/executor:v1.9.0
 # The Jobs Service image to use, if empty the operator will use the default Apache Community one based on the current operator's version
-jobsServicePostgreSQLImageTag: ""
-jobsServiceEphemeralImageTag: ""
+jobsServicePostgreSQLImageTag: "quay.io/kiegroup/kogito-jobs-service-postgresql:weekly-latest"
+jobsServiceEphemeralImageTag: "quay.io/kiegroup/kogito-jobs-service-ephemeral:weekly-latest"
 # The Data Index image to use, if empty the operator will use the default Apache Community one based on the current operator's version
-dataIndexPostgreSQLImageTag: ""
-dataIndexEphemeralImageTag: ""
+dataIndexPostgreSQLImageTag: "quay.io/kiegroup/kogito-data-index-postgresql:weekly-latest"
+dataIndexEphemeralImageTag: "quay.io/kiegroup/kogito-data-index-ephemeral:weekly-latest"
 # SonataFlow base builder image used in the internal Dockerfile to build workflow applications in preview profile
 # Order of precedence is:
 # 1. SonataFlowPlatform in the given namespace
@@ -20,10 +20,10 @@ dataIndexEphemeralImageTag: ""
 # 3. The FROM in the Dockerfile in the operator's namespace "sonataflow-operator-builder-config" configMap.
 # If 1 or 2, the FROM tag will be replaced by the tag se there.
 # If empty the operator will use the default Apache Community one based on the current operator's version.
-sonataFlowBaseBuilderImageTag: ""
+sonataFlowBaseBuilderImageTag: "quay.io/kiegroup/kogito-swf-builder-nightly:latest"
 # The image to use to deploy SonataFlow workflow images in devmode profile.
 # If empty the operator will use the default Apache Community one based on the current operator's version.
-sonataFlowDevModeImageTag: ""
+sonataFlowDevModeImageTag: "quay.io/kiegroup/kogito-swf-devmode-nightly:latest"
 # The default name of the builder configMap in the operator's namespace
 builderConfigMapName: "sonataflow-operator-builder-config"
 # Quarkus extensions required for workflows persistence. These extensions are used by the SonataFlow build system,
