--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -16,6 +16,7 @@ env:
   GO_VERSION: 1.21
   PYTHON_VERSION: "3.10"
   KIND_VERSION: v0.20.0
+  KNATIVE_VERSION: v1.13.2
   OPERATOR_IMAGE_NAME: "127.0.0.1:5001/kogito-serverless-operator:0.0.1"
 
 jobs:
@@ -61,6 +62,9 @@ jobs:
 
       - name: Setup Kind cluster
         run: make KIND_VERSION=${{ env.KIND_VERSION }} create-cluster
+
+      - name: Deploy Knative Eventing and Serving
+        run: make KNATIVE_VERSION=${{ env.KNATIVE_VERSION }} deploy-knative
 
       - name: Set OPERATOR_IMAGE_NAME to point to Kind's local registry
         run: echo "OPERATOR_IMAGE_NAME=${{ env.OPERATOR_IMAGE_NAME }}" >> $GITHUB_ENV
