--- a/bundle.prod/manifests/sonataflow.org_sonataflowplatforms.yaml
+++ b/bundle.prod/manifests/sonataflow.org_sonataflowplatforms.yaml
@@ -567,8 +567,11 @@ spec:
                       persistence:
                         description: Persists service to a datasource of choice. Ephemeral
                           by default.
-                        maxProperties: 1
+                        maxProperties: 2
                         properties:
+                          migrateDBOnStartUp:
+                            description: Whether to migrate database on service startup?
+                            type: boolean
                           postgresql:
                             description: Connect configured services to a postgresql
                               database.
@@ -8439,8 +8442,11 @@ spec:
                       persistence:
                         description: Persists service to a datasource of choice. Ephemeral
                           by default.
-                        maxProperties: 1
+                        maxProperties: 2
                         properties:
+                          migrateDBOnStartUp:
+                            description: Whether to migrate database on service startup?
+                            type: boolean
                           postgresql:
                             description: Connect configured services to a postgresql
                               database.
