--- a/config/manifests/prod/bases/logic-operator-rhel8.clusterserviceversion.yaml
+++ b/config/manifests/prod/bases/logic-operator-rhel8.clusterserviceversion.yaml
@@ -31,7 +31,7 @@ spec:
     owned:
     - description: SonataFlowBuild is an internal custom resource to control workflow
         build instances in the target platform
-      displayName: Sonata Flow Build
+      displayName: SonataFlowBuild
       kind: SonataFlowBuild
       name: sonataflowbuilds.sonataflow.org
       resources:
@@ -78,7 +78,7 @@ spec:
       version: v1alpha08
     - description: SonataFlowClusterPlatform is the Schema for the sonataflowclusterplatforms
         API
-      displayName: Sonata Flow Cluster Platform
+      displayName: SonataFlowClusterPlatform
       kind: SonataFlowClusterPlatform
       name: sonataflowclusterplatforms.sonataflow.org
       resources:
@@ -107,7 +107,7 @@ spec:
       version: v1alpha08
     - description: SonataFlowPlatform is the descriptor for the workflow platform
         infrastructure.
-      displayName: Sonata Flow Platform
+      displayName: SonataFlowPlatform
       kind: SonataFlowPlatform
       name: sonataflowplatforms.sonataflow.org
       resources:
@@ -177,7 +177,7 @@ spec:
       version: v1alpha08
     - description: SonataFlow is the descriptor representation for a workflow application
         based on the CNCF Serverless Workflow specification.
-      displayName: Sonata Flow
+      displayName: SonataFlow
       kind: SonataFlow
       name: sonataflows.sonataflow.org
       resources:
@@ -224,6 +224,9 @@ spec:
         path: endpoint
       - displayName: lastTimeRecoverAttempt
         path: lastTimeRecoverAttempt
+      - description: Platform displays which platform is being used by this workflow
+        displayName: platform
+        path: platform
       - description: keeps track of how many failure recovers a given workflow had
           so far
         displayName: recoverFailureAttempts
