--- a/bundle.prod/manifests/logic-operator-rhel8-controllers-config_v1_configmap.yaml
+++ b/bundle.prod/manifests/logic-operator-rhel8-controllers-config_v1_configmap.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  controllers_cfg.yaml: |
+  controllers_cfg.yaml: |-
     # The default size of Kaniko PVC when using the internal operator builder manager
     defaultPvcKanikoSize: 1Gi
     # How much time (in seconds) to wait for a devmode workflow to start.
@@ -32,10 +32,10 @@ data:
     # Quarkus extensions required for workflows persistence. These extensions are used by the SonataFlow build system,
     # in cases where the workflow being built has configured postgresql persistence.
     postgreSQLPersistenceExtensions:
-      - groupId: io.quarkus
+      - groupId: com.redhat.quarkus.platform
         artifactId: quarkus-jdbc-postgresql
         version: 3.8.6.redhat-00004
-      - groupId: io.quarkus
+      - groupId: com.redhat.quarkus.platform
         artifactId: quarkus-agroal
         version: 3.8.6.redhat-00004
       - groupId: org.kie
