--- a/bundle.prod/manifests/logic-operator-rhel8-builder-config_v1_configmap.yaml
+++ b/bundle.prod/manifests/logic-operator-rhel8-builder-config_v1_configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 data:
   DEFAULT_WORKFLOW_EXTENSION: .sw.json
-  Dockerfile: "FROM registry.redhat.io/openshift-serverless-1/logic-swf-builder-rhel8:latest
+  Dockerfile: "FROM registry.redhat.io/openshift-serverless-1/logic-swf-builder-rhel8:1.34.0
     AS builder\n\n# variables that can be overridden by the builder\n# To add a Quarkus
     extension to your application\nARG QUARKUS_EXTENSIONS\n# Args to pass to the Quarkus
     CLI add extension command\nARG QUARKUS_ADD_EXTENSION_ARGS\n# Additional java/mvn
