--- a/config/manager/prod/controllers_cfg.yaml
+++ b/config/manager/prod/controllers_cfg.yaml
@@ -29,10 +29,10 @@ builderConfigMapName: "logic-operator-rhel8-builder-config"
 # Quarkus extensions required for workflows persistence. These extensions are used by the SonataFlow build system,
 # in cases where the workflow being built has configured postgresql persistence.
 postgreSQLPersistenceExtensions:
-  - groupId: com.redhat.quarkus.platform
+  - groupId: io.quarkus
     artifactId: quarkus-jdbc-postgresql
     version: 3.8.6.redhat-00004
-  - groupId: com.redhat.quarkus.platform
+  - groupId: io.quarkus
     artifactId: quarkus-agroal
     version: 3.8.6.redhat-00004
   - groupId: org.kie
