upgrade OSL artifacts version to 1.34.0.CR1 (#81)

--- a/config/manager/prod/controllers_cfg.yaml
+++ b/config/manager/prod/controllers_cfg.yaml
@@ -29,12 +29,12 @@ builderConfigMapName: "logic-operator-rhel8-builder-config"
 # Quarkus extensions required for workflows persistence. These extensions are used by the SonataFlow build system,
 # in cases where the workflow being built has configured postgresql persistence.
 postgreSQLPersistenceExtensions:
-  - groupId: com.redhat.quarkus.platform
+  - groupId: io.quarkus
     artifactId: quarkus-jdbc-postgresql
-    version: 3.8.6.redhat-00003
-  - groupId: com.redhat.quarkus.platform
+    version: 3.8.6.redhat-00004
+  - groupId: io.quarkus
     artifactId: quarkus-agroal
-    version: 3.8.6.redhat-00003
+    version: 3.8.6.redhat-00004
   - groupId: org.kie
     artifactId: kie-addons-quarkus-persistence-jdbc
-    version: 9.100.0.redhat-00004
+    version: 9.101.0.redhat-00007
