--- a/bundle.prod/manifests/logic-operator-rhel8-controllers-config_v1_configmap.yaml
+++ b/bundle.prod/manifests/logic-operator-rhel8-controllers-config_v1_configmap.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  controllers_cfg.yaml: |-
+  controllers_cfg.yaml: |
     # The default size of Kaniko PVC when using the internal operator builder manager
     defaultPvcKanikoSize: 1Gi
     # How much time (in seconds) to wait for a devmode workflow to start.
