--- a/config/manifests/prod/bases/logic-operator-rhel8.clusterserviceversion.yaml
+++ b/config/manifests/prod/bases/logic-operator-rhel8.clusterserviceversion.yaml
@@ -48,7 +48,7 @@ spec:
     owned:
     - description: SonataFlowBuild is an internal custom resource to control workflow
         build instances in the target platform
-      displayName: Sonata Flow Build
+      displayName: SonataFlowBuild
       kind: SonataFlowBuild
       name: sonataflowbuilds.sonataflow.org
       resources:
@@ -95,7 +95,7 @@ spec:
       version: v1alpha08
     - description: SonataFlowClusterPlatform is the Schema for the sonataflowclusterplatforms
         API
-      displayName: Sonata Flow Cluster Platform
+      displayName: SonataFlowClusterPlatform
       kind: SonataFlowClusterPlatform
       name: sonataflowclusterplatforms.sonataflow.org
       resources:
@@ -124,7 +124,7 @@ spec:
       version: v1alpha08
     - description: SonataFlowPlatform is the descriptor for the workflow platform
         infrastructure.
-      displayName: Sonata Flow Platform
+      displayName: SonataFlowPlatform
       kind: SonataFlowPlatform
       name: sonataflowplatforms.sonataflow.org
       resources:
@@ -161,6 +161,11 @@ spec:
           no build required)
         displayName: DevMode
         path: devMode
+      - description: Broker to communicate with workflow deployment.  It can be the
+          default broker when the workflow, Dataindex, or Jobservice does not have
+          a sink or source specified.
+        displayName: broker
+        path: eventing.broker
       - description: 'Services attributes for deploying supporting applications like
           Data Index & Job Service. Only workflows without the `sonataflow.org/profile:
           dev` annotation will be configured to use these service(s). Setting this
@@ -185,16 +190,19 @@ spec:
           SonataFlowClusterPlatform
         displayName: clusterPlatformRef
         path: clusterPlatformRef
-      - description: Info generic information related to the build
+      - description: Info generic information related to the Platform
         displayName: info
         path: info
+      - description: Triggers list of triggers created for the SonataFlowPlatform
+        displayName: triggers
+        path: triggers
       - description: Version the operator version controlling this Platform
         displayName: version
         path: version
       version: v1alpha08
     - description: SonataFlow is the descriptor representation for a workflow application
         based on the CNCF Serverless Workflow specification.
-      displayName: Sonata Flow
+      displayName: SonataFlow
       kind: SonataFlow
       name: sonataflows.sonataflow.org
       resources:
@@ -231,6 +239,10 @@ spec:
       - description: Sink describes the sinkBinding details of this SonataFlow instance.
         displayName: sink
         path: sink
+      - description: Sources describes the list of sources used to create triggers
+          for events consumed by this SonataFlow instance.
+        displayName: sources
+        path: sources
       statusDescriptors:
       - description: Address is used as a part of Addressable interface (status.address.url)
           for knative
@@ -239,8 +251,13 @@ spec:
       - description: Endpoint is an externally accessible URL of the workflow
         displayName: endpoint
         path: endpoint
+      - displayName: flowRevision
+        path: flowCRC
       - displayName: lastTimeRecoverAttempt
         path: lastTimeRecoverAttempt
+      - description: Platform displays which platform is being used by this workflow
+        displayName: platform
+        path: platform
       - description: keeps track of how many failure recovers a given workflow had
           so far
         displayName: recoverFailureAttempts
@@ -249,6 +266,9 @@ spec:
           workflow
         displayName: services
         path: services
+      - description: Triggers list of triggers created for the SonataFlow
+        displayName: triggers
+        path: triggers
       version: v1alpha08
   description: |-
     OpenShift Serverless Logic Kubernetes Operator for deploying workflow applications
